welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:2: error: type mismatch;
 found   : Int
 required: Boolean
	if( talking && (hour<<7 | hour>>20)){
                                ^